--- a/index.html
+++ b/index.html
@@ -2,10 +2,93 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#ffffff" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solfra</title>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    it worked
+    <div class="maincontainer">
+        <div class="navbar">
+            <div class="top"></div>
+            <div class="content">
+                <div class="todo">
+                    <div class="circle">
+                        <div class="innercircle">
+                            
+                        </div>
+                    </div>
+                    <p class="name"></p>
+                </div>
+                <div class="todo">
+                    <div class="circle">
+                        <div class="innercircle">
+                            <div class="innerinnercircle"></div>
+                        </div>
+                    </div>
+                    <p class="name"></p>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="todo">
+                    <div class="circle">
+                        <div class="innercircle">
+                            <div class="innerinnercircle"></div>
+                        </div>
+                    </div>
+                    <p class="name"></p>
+                </div>
+            </div>
+        </div>
+        <div class="document">
+            <div class="header"></div>
+            <div class="section controlpanel">
+                <button class="option">Action</button>
+                <button class="option">Action</button>
+                <button class="option">Action</button>
+            </div>
+            <h3 class="sectiontitle">Folders</h3>
+            <div class="section folders">
+                <div class="folder">
+                    <div class="logo"></div>
+                    <p class="title">Folder name</p>
+                    <div class="options">
+                        <p class="info">24 dec 2024</p>
+                        <button class="option">D</button>
+                    </div>
+                </div>
+                <div class="folder">
+                    <div class="logo"></div>
+                    <p class="title">Folder name</p>
+                    <div class="options">
+                        <p class="info">24 dec 2024</p>
+                        <button class="option">D</button>
+                    </div>
+                </div>
+            </div>
+            <h3 class="sectiontitle">Recents</h3>
+            <div class="section recents">
+                <div class="option">
+                    <div class="logo"></div>
+                    <div class="right">
+                        <p class="date"></p>
+                        <p class="words"></p>
+                    </div>
+                </div>
+            </div>
+            <h3 class="sectiontitle">All Files</h3>
+            <div class="section allfiles"></div>
+        </div>
+
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
+
