--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#ffffff" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solfra</title>
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
@@ -89,6 +88,8 @@
 
     </div>
     <script src="app.js"></script>
+    <script src="index.js" type="module"></script>
+    
 </body>
 </html>
 
