--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="navbar">
             <div class="top"></div>
             <div class="content">
+                <h1>THIS IS RUNNING IN SERVER</h1>
                 <div class="todo">
                     <div class="circle">
                         <div class="innercircle">
